nextcloud/components/collabora/.test-fixtures/hostdir/collabora.yaml
apiVersion: v1
kind: Service
metadata:
  name: collabora-headless
  labels:
    app: collabora
  annotations:
    package-operator.run/phase: deploy
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: collabora
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: collabora
  labels:
    app: collabora
  annotations:
    package-operator.run/phase: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collabora
  serviceName: collabora-headless
  template:
    metadata:
      labels:
        app: collabora
    spec:
      containers:
      - name: collabora
        image: "registry.package-operator.run/static-image"
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        startupProbe:
          httpGet:
            path: /
            port: 9980
            scheme: HTTP
          failureThreshold: 30
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 9980
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 4
        readinessProbe:
          httpGet:
            path: /
            port: 9980
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 2
        ports:
        - name: http
          containerPort: 9980
      volumes:
      - name: tmp
        emptyDir: {}
